Learning the basics of map making

--- a/week1/tmap_intro.qmd
+++ b/week1/tmap_intro.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Week 1: Lab"
 subtitle: "Making maps with `tmap`"
-author: "Your Name"
+author: "Jackson Coldiron"
 date: 2025-10-2
 execute: 
   eval: true
@@ -89,7 +89,9 @@ In `tmap`, the spatial object to plot needs to be defined within the function `t
 
 Let's start by plotting the countries of the world.
 ```{r}
-
+# Plotting a single spatial object
+tm_shape(world_vector) +  # defines the spatial object to plot
+  tm_polygons()           # defines how to plot the object
 
 ```
 
@@ -105,6 +107,10 @@ Now let's plot the following two spatial objects:
 In the next section we'll unpack the difference between `tm_polygons()` and `tm_dots()`, but for now let's just pay attention to the syntax of how we plot multiple spatial objects. Each spatial object needs to be specified using `tm_shape()` followed by a function for how to plot it. 
 
 ```{r}
+tm_shape(world_vector) +  # defines the spatial object to plot
+  tm_polygons()     +     # defines how to plot the object
+tm_shape(world_cities) +  # defines the second object to plot
+  tm_dots()               # defines how to plot the second object
 
 ```
 
@@ -113,7 +119,14 @@ So far, we've only tried plotting *vector* data (more on what this means next we
 Let's try on example of this by adding information on global elevations to our previous map.
 
 ```{r}
-
+# Plotting vector and raster spatial objects
+tm_shape(world_elevation) + # plot global elevations
+  tm_raster() + #tm_raster for raster data
+  tm_shape(world_vector) +
+  tm_borders() +
+  tm_shape(world_cities) +
+  tm_dots() +
+  tm_text("name", size = 0.7, col = "blue") 
 ```
 
 Similar to `ggplot2` the order of the "layers" matters! The order in which datasets are plotted defines how they are layered (think of this is as adding layers of paint). Spatial objects have extra features which additionally change this behavior: spatial extent and projection. When creating maps with `tmap`, whichever dataset is used in the first `tm_shape()` call sets the spatial extent and projection (more details next week!) for the entire map.
@@ -121,14 +134,26 @@ Similar to `ggplot2` the order of the "layers" matters! The order in which datas
 For example, if we swapped the order of `tm_shape()` calls in the previous example, we'd end up with a different map.
 
 ```{r}
-
+tm_shape(world_cities) + 
+  tm_dots() + 
+  tm_text("name") +
+  tm_shape(world_elevation) +
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders() 
 
 ```
 
 Sometimes this can present sticky issues! Imagine the case where we want to use the spatial extent and projection from the `world_cities` data, but want it plotted on top of the other datasets. We can do this by changing the main *shape* using the `is.main` argument.
 
 ```{r}
-
+tm_shape(world_elevation) +
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders() +
+  tm_shape(world_cities, is.main = TRUE) + # plotting world cities last but set as main shape
+  tm_dots() +
+  tm_text("name")
 
 ```
 
@@ -146,13 +171,19 @@ We have two options:
 For example, let's restrict our previous map to just Europe using a set of min/max values.
 
 ```{r}
-
+tm_shape(world_elevation, bbox = c(-15, 35, 45, 65)) + # add bounding to restrict extent of map
+  tm_raster() +
+  tm_shape(world_vector) + 
+  tm_borders()
 ```
 
 We can also restrict the extent of the map using the extent of a dataset. For example, we can restrict the map using the extent of the `world_cities` data.
 
 ```{r}
-
+tm_shape(world_elevation, bbox = world_cities) + # make bounding box same extent of world cities
+  tm_raster() +
+  tm_shape(world_vector) + 
+  tm_borders()
 
 ```
 
@@ -162,7 +193,10 @@ We can also restrict the extent of the map using the extent of a dataset. For ex
 You can also restrict the map extent using an OpenStreetMap tool called Nominatim to automatically generate minimum and maximum coordinates in the x and y directions based on the provided query.
 
 ```{r}
-
+tm_shape(world_elevation, bbox = "Europe") +
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders()
 
 
 ```
@@ -227,6 +261,12 @@ We modify the colors useing the `col` and `border.col` arguments and other argum
 
 ```{r}
 
+tm_shape(world_vector) +
+  tm_polygons(fill = "lightblue",
+              col = "black",
+              lwd = 0.5,
+              lty = "dashed"
+  )
 
 ```
 
@@ -235,15 +275,22 @@ But, you may have noticed in the previous table that `tm_polygons` isn't the onl
 The `tm_borders()` function plots just the borders and the `tm_fill()` function fills polygons with a fixed color or a color palette representing a selected variable. 
 
 ```{r}
+# Plot just borders
+tm_shape(world_vector) +
+  tm_borders(col = "red")
+```
+
+```{r}
+# Fill polygon with fixed color
+tm_shape(world_vector) +
+  tm_fill(fill = "lightblue")
 
 ```
 
 ```{r}
-
-
-```
-
-```{r}
+# Fill polygon with a color palette representing a variable
+tm_shape(world_vector) +
+  tm_fill("CO2_emissions")
 
 ```
 
@@ -261,6 +308,8 @@ Symbols are a very flexible layer type. They typically represent point data, but
 `tm_symbols()` is the main function in `tmap` to display and modify symbol elements. By default, this function draws a gray circle symbol with a black border for each element of an input feature.
 
 ```{r}
+tm_shape(world_cities) +
+  tm_symbols()
 
 ```
 
@@ -272,7 +321,11 @@ Symbols are a very flexible layer type. They typically represent point data, but
 - `tm_markers()`: uses marker icons
 
 ```{r}
-
+tm_shape(world_cities) +
+  #tm_squares()
+  #tm_symbols(shape = 22)
+  #tm_bubbles()
+  tm_dots()
 ```
 
 
@@ -317,7 +370,11 @@ Just like updating axis labels, we always need to update legend titles. In `tmap
 
 ```{r}
 
-
+tm_shape(world_vector) +
+  tm_polygons(fill = "life_expectancy",
+              fill.scale = tm_scale(values = c("yellow", "darkgreen")),
+              fill.legend = tm_legend(title = "Life Expectancy (years)",
+                                      position = tm_pos_in("left")))
 ```
 
 Another approach is to provide the output of a palette function. When using a palette function, you can specify the number of colors to use. Below we use the `viridis` palette from the `viridisLite` package.
@@ -329,14 +386,24 @@ Another approach is to provide the output of a palette function. When using a pa
 #install.packages("viridisLite")
 library(viridisLite)
 
-
+tm_shape(world_vector) +
+  tm_polygons(fill= "life_expectancy",
+              fill.scale = tm_scale(values = viridis(8)),
+              fill.legend = tm_legend(title = "Life Expectancy (years)"))
 
 ```
 
 Finally, the last approach is to use the name of one of the built-in color palettes.
 
 ```{r}
-
+# Built in color palette
+tm_shape(world_vector) +
+  tm_polygons( fill = "life_expectancy",
+               #fill.scale = tm_scale(values = "brewer.yl_gn"),
+               #fill.scale = tm_scale(values = "brewer.YlOrBr"),
+               #fill.scale = tm_scale(values = "Pastel1"),
+               fill.scale = tm_scale(values = "Accent"),
+               fill.legend = tm_legend(title = "Life Expectancy (years)"))
 ```
 
 ### Size
@@ -344,7 +411,13 @@ Finally, the last approach is to use the name of one of the built-in color palet
 Sizes can be used for points, lines (line widths), or text to represent quantitative (numerical) variables. By default, `tmap` represents points, lines, or text objects as the same size. The size of objects can be changed by using the `size` argument.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = "lightblue") +
+  tm_shape(world_cities) +
+  tm_symbols(
+    size = "pop2020",
+    size.legend = tm_legend(orientation = "landscape")
+  )
 
 ```
 
@@ -361,7 +434,7 @@ attr_layers_df = tibble::tribble(
   ~Function, ~Description,
   "tm_grid()", "draws coordinate grid lines of the coordinate system of the main shape object",
   "tm_graticules()", "draws latitude and longitude graticules", 
-  "tm_scale_bar()", "adds a scale bar", 
+  "tm_scalebar()", "adds a scale bar", 
   "tm_compass()", "adds a compass rose", 
   "tm_credits()", "adds a text annotation", 
   "tm_logo()", "adds a logo",
@@ -386,19 +459,27 @@ The `tmap` package offers two ways to draw coordinate lines - `tm_grid()` and `t
 
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_fill() +
+  tm_grid()
 ```
 
 `tm_graticules()` shows latitude and longitude lines, with degrees as units
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_graticules() +
+  tm_fill() 
+  
 ```
 
 Both `tm_grid()` and `tm_graticules()` can be placed above or below other map layers.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_fill() +
+  tm_scalebar() +
+  tm_compass(north = 180, position = c("left", "top"))
 ```
 
 ### Scale bar and north arrow
