--- a/week4/rasters.qmd
+++ b/week4/rasters.qmd
@@ -268,13 +268,20 @@ In the previous example, we just got the values of the raster back (and lost the
 We can do this use the "[" operator and setting "drop = FALSE".
 
 ```{r}
-zion_elevation_clip <- zion_elevation[clip, drop = FALSE]
+zion_elevation_clip <- zion_elevation[clip, drop = FALSE] # don't drop the geometries associated with the raster
 
 ```
 
 ```{r}
+map1 <- tm_shape(zion_elevation) +
+  tm_raster(co.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Original")
 
- 
+map2 <- tm_shape(zion_elevation_clip) +
+  tm_raster(co.legend = tm_legend(title = "Elevation (m)")) +
+ tm_title(text = "Clipped")
+
+tmap_arrange(map1, map2, nrow = 1)
 ```
 
 :::{.callout-warning icon=true}
@@ -287,7 +294,13 @@ Plotting side-by-side, the clipped version appears to take up more space -- does
 
 
 ```{r}
+if(ext(zion_elevation) == ext(zion_elevation_clip)) {
+  print("Extents match")
+}else{
+  print("extents don't match")
+}
 
+# We want our extents not to match
 
 ```
 
@@ -296,13 +309,35 @@ Plotting side-by-side, the clipped version appears to take up more space -- does
 In the previous example, we subsetted the extent of the raster (removed cells). Another common use of spatial subsetting is to select cells based on their values. In this case we create a "masking" raster comprised of logicals or NAs that dictates the cells we would like to preserve.
 
 ```{r}
-
+# Create a raster mask (duplicate of Zion)
+rmask <- zion_elevation
      
+# Set all the cells that have elevation less than 2000m to NA
+rmask[rmask < 2000] <- NA
 
+# Subset elevation raster based on the mask
+
+### Approach 1: Bracket subsetting
+masked1 <- zion_elevation[rmask, drop = FALSE]
+
+### Approach 2: mask() function
+masked2 <- mask(zion_elevation, rmask)
 ```
 
 ```{r}
+map1 <- tm_shape(zion_elevation) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Original")
 
+map2 <- tm_shape(masked1) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Bracker Subsettiing")
+
+map3 <- tm_shape(masked2) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "mask()")
+
+tmap_arrange(map1, map2, map3, nrow = 1)
 
 ```
 
@@ -314,7 +349,13 @@ In the previous example, we subsetted the extent of the raster (removed cells). 
 Local operations are computed on each cell individually. For example, we can use ordinary arithmetic or logical statements.
 
 ```{r}
+zion_elevation + zion_elevation # double each cell value
 
+zion_elevation^2 # square each value of the cell
+
+log(zion_elevation) # log of each cell
+
+zion_elevation > 5 # determines whether each cell has a value greater than 5
 
 ```
 
@@ -327,12 +368,35 @@ First, we need to construct a reclassification matrix:
   - The third column corresponds to the new value for the specified ranges in columns 1 and 2
 
 ```{r}
+# Create a reclassification matrix
+rcl <- matrix(c(
+  1000, 1500, 1, # group 1 ranges from 1000 - 1500 m
+  1500, 2000, 2, # group 2
+  2000, 2500, 3, # group 3
+  2500, 3000, 4 # group 4
+),
+ncol = 3, byrow = TRUE)
+
+# Use reclass matrix to reclassify elevation raster
+reclassified <- classify(zion_elevation, rcl = rcl)
+
+# Change reclassify values into factors 
+values(reclassified) <- as.factor(values(reclassified))
 
 
+summary(reclassified)
 ```
 
 ```{r}
+map1 <- tm_shape(zion_elevation) +
+  tm_raster(col.legend = tm_legend("Elevation (m)")) +
+  tm_title(text = "Original")
 
+map2 <- tm_shape(reclassified) +
+  tm_raster(col.legend = tm_legend("Elevation (m)")) +
+  tm_title(text = "Reclassified")
+
+tmap_arrange(map1, map2, nrow = 1)
 
 ```
 
@@ -348,12 +412,19 @@ We can use the `lapp()`function to compute the Normalized Difference Vegetation 
 First, we need to define a function to calculate NDVI. Then, we can use `lapp()` to calculate NDVI in each raster cell. To do so, we just need the NIR and red bands.
 
 ```{r}
+# Define NDVI
+ndvi_fun <- function(nir,red) {
+  (nri - red) / (nir + red)
+}
 
+# Apply NDVI functino to landsat bands 3 and 4 (red and NIR)
+ndvi_rast <- lapp(landsat[[c(4,3)]], fun = ndvi_fun)
 
 ```
 
 ```{r}
-
+tm_shape(ndvi_rast) +
+  tm_raster(col.legend = tm_legend(title = "NDVI"))
 
 ```
 
@@ -371,12 +442,22 @@ The image below provides an example of using a moving window filter. The large o
 We can use the `focal()` function to perform spatial filtering. We define the size, shape, and weights of the moving window using a matrix. In the following example we'll find the minimum value in 9x9 cell neighborhoods.
 
 ```{r}
-
+elevation_focal <- focal(zion_elevation,
+                         w = matrix(1, nrow = 9, ncol = 9),
+                         fun = min)
 
 ```
 
 ```{r}
+map1 <- tm_shape(zion_elevation) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Original")
 
+map2 <- tm_shape(elevation_focal) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Aggregated")
+
+tmap_arrange(map1, map2, nrow = 1)
 
 ```
 
@@ -396,10 +477,11 @@ Similar to focal operations, zonal operations apply an aggregation function to m
 For example, we could find the average elevation within the elevations zones we created.
 
 ```{r}
-
+zonal(zion_elevation, reclassified, fun = "mean") |>
+  kable(col.names = c("Elevation zone", "Mean elevation (m)")) |>
+  kable_styling(bootstrap_options = "striped")
 
 ```
-
 
 
 # Geometry Operations
@@ -410,26 +492,27 @@ When merging or performing map algebra, rasters need to match in their resolutio
 In the simplest case, two images differ only in their extent. Let's start by increasing the extent of a elevation raster.
 
 ```{r}
-
+# Adding two rows to the top and bottom 200 to the right and the left
+elev_2 <- extend(zion_elevation, c(1, 200)) 
 ```
 
 Performing algebraic operations on objects with different extents doesn't work.
 
 ```{r}
-
+zion_elevation + elev_2 # Different extents don't work for algebraic operations
 ```
 
 We can align the extent of the 2 rasters using the `extend()` function. Here we extend the `zion_elevation` object to the extent of elev_2 by adding NAs.
 
 ```{r}
-
+elev_3 <- extend(zion_elevation, elev_2)
 ```
 
 ### Origin
 The origin function returns the coordinates of the cell corner closes to the coordinates (0,0). 
 
 ```{r}
-
+origin(zion_elevation)
 
 ```
 
@@ -440,12 +523,20 @@ Raster datasets can also differ in their resolution. To match resolutions we can
 When decreasing the resolution of rasters, we are effectively combining multiple cells into a single cell. Let's start by coarsening the resolution of the Zion elevation data by a factor of 5, by taking the mean value of cells.
 
 ```{r}
+zion_elevation_coarse <- aggregate(zion_elevation, fact = 5, fun = mean)
 
 ```
 
 ```{r}
+map1 <- tm_shape(zion_elevation) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Original")
 
+map2 <- tm_shape(zion_elevation_coarse) +
+  tm_raster(col.legend = tm_legend(title = "Elevation (m)")) +
+  tm_title(text = "Coarse")
 
+tmap_arrange(map1, map2, nrow = 1)
 
 ```
 
@@ -481,7 +572,8 @@ No! There is no way for us to exactly recover the original data from the aggrega
 ```
 
 ```{r}
-
+# Disaggregate the aggregated raster
+zion_elevatioin_disagg <- disagg(zion_elevation_coarse, fact = 5, method = "bilinear")
 
 ```
 
